tests/cheri-ci/expected/0238-storage-class-function-decl.error.c.expected
cheri-ci/0238-storage-class-function-decl.error.c:1:22: error: constraint violation: invalid storage class specifier in function declarator
void foo (static int x);
                     ^ 
ยง6.7.6.3#2: 
2    The only storage-class specifier that shall occur in a parameter declaration is register.
